k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: helloworld-cluster
  labels:
    app: helloworld-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-app
  template:
    metadata:
      labels:
        app: helloworld-app
    spec:
      containers:
      - name: helloworld-app
        image: roydeng0428/helloworld-java:1.0.0
        ports:
          - containerPort: 8080
        imagePullPolicy: Always
