k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
spec:
  selector:
    app: helloworld-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: LoadBalancer
