k8s/app/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: helloworld
spec:
  rules:
  - host: k8s-test.com
    http:
      paths:
      - path: /test-redis
        backend:
          serviceName: helloworld-service
          servicePort: 80
